# tinkybink_rust

./: .clippy.toml  .gitignore  COMPREHENSIVE_IMPROVEMENTS.md  Cargo.toml  demo.html  download_model.sh  fix-lint-critical.sh  fix_all_warnings.sh  fix_lint.sh  fix_lint_issues.sh  run_simulation.sh  rustfmt.toml  server.py  stroke_victim_bidirectional.html  stroke_victim_connected.html  stroke_victim_enhanced.html  stroke_victim_perfect.html  stroke_victim_simple.html  stroke_victim_simulation.html  stroke_victim_test_suite.html  stroke_victim_ultimate.html  test_aac_comprehensive.sh  test_demo.sh  tinkybink_complete_integration.rs
src/: allow_warnings.rs  comprehensive_brain_loader.rs  conversation_logic.rs  lib.rs  main.rs  training_loader.rs  wasm.rs
src/ai/: candle_engine.rs  gpt_core.rs  gpt_core_es.rs  gpt_core_hi.rs  gpt_core_ru.rs  gpt_core_zh.rs  llama_engine.rs  mod.rs  nano_gpt.rs  ollama_engine.rs  ollama_simple.rs  online_engine.rs
src/core/: events.rs  mod.rs  state.rs  user_profile.rs
src/ui/: mod.rs
training/: Modelfile.activity_integrated  Modelfile.bulletproof  Modelfile.final_master  Modelfile.final_perfect  Modelfile.perfect_10  Modelfile.production  Modelfile.simple  Modelfile.tinkybink  Modelfile.tinkybink_complete  Modelfile.tinkybink_emoji_master  Modelfile.tinkybink_emotional_regulation  Modelfile.tinkybink_independence  Modelfile.tinkybink_massive  Modelfile.tinkybink_medical_emergency  Modelfile.tinkybink_minimal_perfect  Modelfile.tinkybink_production  Modelfile.tinkybink_social_integration  Modelfile.tinkybink_surgical  Modelfile.tinkybink_therapy_progression  Modelfile.tinkybink_ultimate  Modelfile.tinkybink_ultimate_fusion  Modelfile.tinkybink_ultimate_polished  Modelfile.tinkybink_v1  Modelfile.tinkybink_v2  Modelfile.tinkybink_v3  Modelfile.unique  aac_decision_trees.json  aac_emoji_mappings.json  aac_ultimate_logic_trees.json  absolutely_final_complete_summary.json  activity_board_trainer.py  activity_boards.json  add_all_remaining_topics.py  bulletproof_trainer.py  combination_summary.json  combine_all_unique.py  combine_with_drilldowns.py  continuous_trainer.py  conversation_trainer.py  create_1000_plus_final.py  (+171 more)
training_es/: comida_espanola.json  emergencias.json  emociones.json  escuela.json  expresiones_culturales.json  familia.json  juegos.json  necesidades_basicas.json  rutinas_diarias.json  saludos.json
training_ru/: базовые_потребности.json  игры.json  культурные_выражения.json  повседневные_дела.json  приветствия.json  русская_еда.json  семья.json  школа.json  экстренные_ситуации.json  эмоции.json
training_zh/: 中国食物.json  基本需求.json  学校.json  家庭.json  情感.json  文化表达.json  日常活动.json  游戏.json  紧急情况.json  问候.json
(+10 files in other folders)
