[package]
name = "tinkybink_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "fs", "rt-multi-thread"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tauri = { version = "1.0", features = ["api-all"], optional = true }
tauri-build = { version = "1.0", optional = true }
dirs = { version = "5.0", optional = true }
tts = { version = "0.26", optional = true }
whisper-rs = { version = "0.12", optional = true }
async-trait = "0.1"
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3", features = ["tokio"], optional = true }
tokenizers = { version = "0.21", optional = true }

# 🌐 WASM Dependencies for Revolutionary Browser Deployment
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "Window",
  "Event",
  "EventTarget",
  "MouseEvent",
  "SpeechSynthesis",
  "SpeechSynthesisUtterance",
  "SpeechRecognition",
  "SpeechRecognitionEvent",
  "SpeechRecognitionResult",
  "SpeechRecognitionResultList",
  "Storage",
  "Location",
  "History"
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = ["tokio", "clap", "tracing", "tracing-subscriber", "reqwest", "tts"]
desktop = ["tauri", "tauri-build", "dirs"]
whisper = ["whisper-rs"]
ai-llama = []
ai-candle = ["candle-core", "candle-transformers", "hf-hub", "tokenizers"]
wasm = [
  "serde-wasm-bindgen",
  "wasm-bindgen", 
  "web-sys", 
  "js-sys", 
  "wasm-bindgen-futures", 
  "console_error_panic_hook",
  "getrandom"
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tinkybink_rust"
path = "src/main.rs"

[[bin]]
name = "conversation_demo"
path = "src/bin/conversation_demo.rs"

[dev-dependencies]
tempfile = "3.0"
